--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node dist/server.ts",
     "build": "tsc",
-    "dev": "nodemon --ext ts,js --exec ts-node src/index.ts"
+    "dev": "nodemon --ext ts,js,json --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
