--- a/back/package.json
+++ b/back/package.json
@@ -1,25 +1,31 @@
 {
   "name": "observatoire-billets-train-back",
   "version": "0.0.0",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "start": "node dist/server.ts",
     "build": "tsc",
-    "dev": "nodemon --ext ts,js,json --exec ts-node src/index.ts"
+    "dev": "nodemon --ext ts,js,json --exec ts-node src/index.ts",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.0.15",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.0.1"
   },
   "dependencies": {
     "cors": "^2.8.5",
