--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=GaboFlo_observatoire-billets-train_e1b0c0a1-dc7f-43cd-ac00-aed6
 sonar.plugins.downloadOnlyRequired=true
 sonar.exclusions=**/node_modules/**
 sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
-sonar.inclusions=src/**/*
+sonar.inclusions=back/src/**/*,front/src/**/*
 sonar.scm.provider=git
 sonar.coverage.exclusions=
 sonar.javascript.lcov.reportPaths=
