--- a/back/package.json
+++ b/back/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "node dist/server.ts",
+    "start": "node dist/index.js",
     "build": "tsc",
     "dev": "nodemon --ext ts,js,json --exec ts-node src/index.ts",
     "lint": "eslint ."
