--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,8 +31,11 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Install dependencies
-        run: cd front && npm install
+      - name: Clean and install dependencies
+        run: |
+          cd front
+          rm -rf node_modules package-lock.json
+          npm install
 
       - name: Build frontend
         env:
