--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cd front
           rm -rf node_modules package-lock.json
-          npm install
+          npm install --force
 
       - name: Build frontend
         env:
