--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -16,13 +16,17 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Update npm
+        run: npm install -g npm@latest
+
       - name: Clean and install dependencies
         run: |
           cd front
           rm -rf node_modules package-lock.json
-          npm install
-          npm install @rollup/rollup-linux-x64-gnu --save-optional --force
-          npm rebuild rollup || true
+          npm install --legacy-peer-deps
+          cd node_modules/rollup
+          npm install @rollup/rollup-linux-x64-gnu --save-optional --force || true
+          cd ../..
 
       - name: Build frontend
         run: cd front && npm run build
