--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,6 +26,9 @@ jobs:
           cd node_modules/rollup
           npm install @rollup/rollup-linux-x64-gnu --save-optional --force || true
           cd ../..
+          cd node_modules/@swc/core
+          npm install @swc/core-linux-x64-gnu --save-optional --force || true
+          cd ../../..
 
       - name: Build frontend
         run: cd front && npm run build
