--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,20 @@ jobs:
         with:
           node-version: "20"
 
+      - name: Update npm
+        run: npm install -g npm@latest
+
       - name: Clean and install dependencies
         run: |
           cd front
           rm -rf node_modules package-lock.json
-          npm install
+          npm install --legacy-peer-deps
+          cd node_modules/rollup
+          npm install @rollup/rollup-linux-x64-gnu --save-optional --force || true
+          cd ../..
+          cd node_modules/@swc/core
+          npm install @swc/core-linux-x64-gnu --save-optional --force || true
+          cd ../../..
 
       - name: Build frontend
         env:
