--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,7 @@ permissions:
 jobs:
   deploy-back:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Déclencher le déploiement Render
         env:
@@ -22,6 +23,7 @@ jobs:
           curl -X POST "$deploy_url"
   deploy-front:
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
